<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog">Каталог</string>
    <string name="favourite">По популярности</string>
    <string name="filter">Фильтры</string>
    <string name="all_see">Смотреть все</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="zagar">Загар</string>
    <string name="mask">Маска</string>
</resources>